Fine riassunto della Campagna 0 - La scaglia del drago

--- a/La_Costa_Della_Spada/Campagna.html
+++ b/La_Costa_Della_Spada/Campagna.html
@@ -48,7 +48,7 @@
                 <p><b>Giocatore:</b> Armando</p>
                 <div class="scheda">
                     <img class="immagine-scheda" src="../Immagini/Lucien.png" alt="Lucien Scheda">
-                    <img class="immagine-scheda-1" src="../Immagini/Mastino.png" alt="Mastino Scheda">
+                    <img class="immagine-scheda-1" src="../Immagini/Morgana.png" alt="Morgana Scheda">
                 </div>
             </div>
             <div class="giocatore">
@@ -97,7 +97,11 @@
                         <img class="immagine-scheda" src="../Immagini/Brottor.png" alt="Brottor Scheda">
                         <div class="descrizione-scheda">
                             <h2>Brottor</h2>
-                            <p>Descrizione di Brottor. Inserisci qui tutte le informazioni relative a questo elemento.</p>
+                            <p>Brottor Dankin è un nano mercante nato e cresciuto nella montagna di Mirabar. Qui, oltre ada
+                                abitarci è anche dei due ingegneri più famosi della città. Oltre il suo amore
+                                per il denaro e le invenzioni, Brottor è amico di Bartolomiao e alleato dell'Alleanza
+                                dei Lord.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +112,12 @@
                         <img class="immagine-scheda" src="../Immagini/Bartolomiao.png" alt="Bartolomiao Scheda">
                         <div class="descrizione-scheda">
                             <h2>Bartolomiao</h2>
-                            <p>Descrizione di Bartolomiao. Inserisci qui tutte le informazioni relative a questo elemento.</p>
+                            <p>Bartolomiao è un tabaxi mago, che vive a Neverwinter ed è un fedele servitore dell'Alleanza dei Lord.
+                                Bartolomiao, con il suo pelo nero e gli occhi azzurri, ha un'aura misteriosa, ma buona
+                                e accogliente. La sua conoscenza della magia e delle leggende lo rende un alleato prezioso per il gruppo.
+                                Dispone di una grande biblioteca e di uno studio protetto da magie che impediscono l'orecchiamento e dove
+                                passa intere gioenate ad allenare la sua mente calma, calcolatrice e mistriosa.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -119,7 +128,67 @@
                         <img class="immagine-scheda" src="../Immagini/Drago_Bianco.png" alt="Drago Bianco Scheda">
                         <div class="descrizione-scheda">
                             <h2>Drago Bianco</h2>
-                            <p>Descrizione del Drago Bianco. Inserisci qui tutte le informazioni relative a questo elemento.</p>
+                            <p>I draghi bianchi, i più piccoli, i meno intelligenti e i più animaleschi dei draghi cromatici,
+                                vivono nei territori gelidi e prediligono le aree artiche o le montagne ghiacciate. Sono rettili
+                                crudeli e feroci, spinti dalla fame e dall'avidità. Un drago bianco ha gli occhi di una belva, un 
+                                corpo esile e una cresta spinata. Le scaglie di un drago bianco cucciolo sono bianche e candide come neve.
+                                Man mano che il drago cresce, il bagliore scompare e alcune scaglie iniziano a scurirsi, così quando un drago
+                                bianco raggiunge la vecchiaia, mostra delle chiazza color azzurro pallido o grigio chiaro. Queste sfumature 
+                                aiutano il drago a mimetizzarsi meglio nei territori di ghiaccio e pietra in cui va a caccia e a svanire 
+                                dalla vista quando sfreccia in un cielo coperto di nuvole. <br><b>Primitivi e Vendicativi</b>. I draghi bianchi
+                                sono privi dell'astuzia e del senso tattico di buona parte dei draghi. Tuttavia, grazie alla loro natura
+                                bestiale si dimostrano i cacciatori migliori tra tutti i draghi, concentrandosi ossessivamente sulla sopravvivenza
+                                e sull'uccisione dei loro nemici. Un drago bianco ingerisce soltanto cibo congelato, divorando le creature 
+                                uccise dalla sua arma a soffio quando sono ancora rigide e ghiacciate. Rinchiude le altre vittime nel ghiaccio
+                                e lo seppellisce sotto la neve, e chi trova una macabra dispensa di questo tipo capisce che la tana di un 
+                                drago bianco deve trovarsi nelle vicinanze. Un drago bianco conserva i corpi delle sue più grandi vittime come
+                                trofei, congelandone i cadaveri in modo che possa continuare ad ammirarli e a gongolare. I resti di giganti, 
+                                remorhaz e altri draghi sono spesso esposti in bella mostra all'interno della tana di un drago bianco come monito
+                                per gli intrusi. Sebbene la loro intelligenza sia limitata, i draghi bianchi hanno una memoria straordinaria.
+                                Ricordano ogni torto e ogni sconfitta subita e sono noti per orchestrare feroci vendette contro le creature
+                                che li hanno offesi. Questo solitamente include i draghi d'argento, che fanno la tana negli stessi territori.
+                                I draghi bianchi sanno parlare come tutti gli altri darghi, ma lo fanno raramente,
+                                a meno che non siano spronati a farlo. <br><b>Padroni Solitari</b>. I draghi bianchi evitano
+                                tutti gli altri draghi, ad eccezione di quelli bianchi del sesso opposto. E anche in quel caso,
+                                li cercano al puro scopo di accoppiarsi e restano assieme soltanto quanto basta per generare una 
+                                progenie, prima di ritirarsi di nuovo in isolamento. I draghi bianchi non tollerano la presenza di 
+                                alcun rivale nei pressi delle loro tane, quindi tendono ad attaccare le altre creature senza alcuna provocazione,
+                                considerandole troppo deboli o troppo potenti per essere lasciate in vita. Le uniche creature che solitamente
+                                servono un drago bianco sono quegli umanoidi intelligenti dotati di forza sufficiente a reggere alla collera
+                                del drago bianco e in grado di sopportare le perdite inferte dalla sua fame. Questo include anche i veneratori
+                                di draghi come i coboldi, che sono una presenza ricorrente nelle loro tane. Una potente creatura a volte può
+                                ottenere l'obbedienza si un drago bianco attraverso una dimostrazione di potenza fisica o magica. i giganti
+                                del gelo sfidano i draghi bianchi per dimostrare la loro forza e acquisire prestigio tra i loro clan, ma molte
+                                tane di draghi bianchi sono disseminate dalle loro ossa spezzate. Tuttavia, un drago bianco sconfitto da un gigante
+                                del gelo diventa suo servitore, accettando di essere comandato da una creatura superiore in cambio dell'opportunità di 
+                                esercitare il suo dominio sulle altre creature che servono il gigante o si oppongono ad esso. <br><b>Tesori sotto i Ghiacci</b>. 
+                                i draghi bianchi adorano il freddo scintillio del ghiaccio e prediligono i tesori che mostrano quanlità analoghe,
+                                soprattutto i diamanti. Tuttavia, nei remoti climi artici in cui vivono, i tesori dei draghi bianchi a contenere
+                                zanne d'avorio di trichechi e mammut, sculture in osso di balena, polene recuperate dalle navi affondate, pellicce
+                                e oggetti magici strappati ad avventurieri troppo audaci. Le monete e le gemme di un drago bianco giacciono sparpagliate
+                                per tutta la tana, luccicando come stelle quando vengono colpite dalla luce. I tesori e i forzieri più grossi
+                                sono incastonati all'interno di strati di brina generati dall'arma a soffio del drago e protetti da un solido strato
+                                di ghiaccio trasparente. Il drago, grazie alla sua grande forza, può accedere alle sue ricchezze facilmente, mentre le creature
+                                inferiori dovranno passare ore a spaccare o a fondere il ghiaccio per raggiungere il grosso del tesoro. Grazie alla sua infallibile
+                                memoria, un drago bianco ricorda sempre come è entrato in possesso di ogni moneta, gemma o oggetto magico del suo tesoro e associa a 
+                                ogni oggetto una vittoria specifica. I draghi bianchi sono noti per essere difficili da corrompere, dal momento che vedono in ogni offerta
+                                di tesoro un insulto alla loro capacità di uccidere la creatura che lo possiede per impossersarsene con la forza.  
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item" data-item="5">
+                    <img src="../Immagini/Maccus.png" alt="Maccus">
+                    <p>Maccus</p>
+                    <div class="scheda-menu">
+                        <img class="immagine-scheda" src="../Immagini/Maccus.png" alt="Maccus Scheda">
+                        <div class="descrizione-scheda">
+                            <h2>Maccus</h2>
+                            <p>Maccus è un umano ranger, a giudicare dall'aspetto si direbbe che è sulla sessantina d'anni. Padre di Trogo, colui
+                                che gli ha insegnato tutto sulla sopravvivenza nei posti più spietati e pericolosi ora si è rivoltato contro di voi. 
+                                Appartenente alle Dieci Frecce, vi ha attaccato con un gruppo di suoi seguaci fuori dalla tana del drago per ottenere le scaglie, 
+                                ma voi lo avete fermato e Trogo gli ha tagliato le mani. Tuttavia, è scappato.
+                            </p>
                         </div>
                     </div>
                 </div>
