Ho inserito informazioni su Waterdeep

--- a/La_Costa_Della_Spada/Campagna.html
+++ b/La_Costa_Della_Spada/Campagna.html
@@ -62,13 +62,13 @@
                 </div>
             </div>
             <div class="giocatore">
-                <img src="../Immagini/Azrael.jpg" alt="Azrael">
+                <img src="../Immagini/Azrael.png" alt="Azrael">
                 <h3>Azrael</h3>
                 <p><b>Razza:</b> Elfo</p>
                 <p><b>Classe:</b> Paladino</p>
                 <p><b>Giocatore:</b> Ludovico</p>
                 <div class="scheda">
-                    <img class="immagine-scheda" src="../Immagini/Azrael.jpg" alt="Azrael Scheda">
+                    <img class="immagine-scheda" src="../Immagini/Azrael.png" alt="Azrael Scheda">
                 </div>
             </div>
         </div>
@@ -189,6 +189,88 @@
                                 Appartenente alle Dieci Frecce, vi ha attaccato con un gruppo di suoi seguaci fuori dalla tana del drago per ottenere le scaglie, 
                                 ma voi lo avete fermato e Trogo gli ha tagliato le mani. Tuttavia, è scappato.
                             </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item" data-item="6">
+                    <img src="../Immagini/mappa_Waterdeep.webp" alt="Mappa Waterdeep">
+                    <p>Waterdeep</p>
+                    <div class="scheda-menu">
+                        <img class="immagine-scheda" src="../Immagini/mappa_Waterdeep.webp" alt="Mappa Waterdeep Scheda">
+                        <div class="descrizione-scheda">
+                            <h2>Waterdeep</h2>
+                            <p>La città degli Splendori, nota anche come la Corona del Nord, sorge dalle acque profonde
+                                della sua baia e sale fino alla grande montagna che si affaccia sul Mare delle Spade. In 
+                                tutto Faer&uml;n, questa grande metropoli incarna l'apice di ciò che una grande città deve
+                                essere in termini di ricchezza, influenza e stabilità. A Waterdeep i cittadini lavorano, i nobili
+                                si danno delle arie e i grandi lord mascherati tramano e complottano, mentre i mercanti sgusciano tra
+                                tutto questo per accumulare monete e continuare a trarre profitto come meglio possono. Le botteghe e i mercati di
+                                Waterdeep offrono merci di ogni tipo provenientio da ogni angolo di Toril e per chi ha denaro e pazienza a 
+                                sufficienza, anche il più raro degli oggetti può essere procurato. Gli avventurieri prive dell'una e dell'altra
+                                cosa possono trovare con la massima facilità ogni sorta di impiego, dalla scorta a una carovana alla protezione
+                                di un nobile, fino alla richiesta di indagare su un complesso di rovine o un particolare mostro del Nord. 
+                                Anche se Waterdeep si erge intatta da molti secoli, soltanto ora sta tornando ai fasti di un secolo e mezzo fa.
+                                I recenti tumulti ebbero inizio quando gli dei presero ad aggirarsi per i Reami e a uccidersi a vicenda sotto
+                                gli occhi dei mortali, per poi ascendere di nuovo ai loro ranghi divini proprio nelle strade di Waterdeep.
+                                Alcuni decenni dopo, altre divinità iniziarono a morire, la magia si estinse e una serie di catastrofi alterò
+                                la natura stessa della città. Lord Neverember distrusse la flotta della città e poi, invece di ricostruirla,
+                                ingaggiò equipaggi di marinai a pagamento da Mintarn (e trasse profitto da questa manovra). Ora la Città degli Splendori
+                                si sta riprendendo. Il porto è stato sgomberato dai relitti delle navi che componevano il vecchio quartiere
+                                di Riva Velata e Waterdeep possiede di nuovo una sua flotta. La Guardia cittadina (il suo esercito), la Vigilanza 
+                                (la sua forza di polizia). la Marina e la sua famosa Cavalleria dei Grifoni sono state riformate, anche se ci 
+                                vorranno anni prima che tutto torni alla normalità. Un'epidemia ha allontanato buona parte dei residenti 
+                                dai Cunicoli e da Ombrabassa, e vivere o scavare sotto la superficie della città è stato proclamato illegale
+                                per chiunque non sia esplicitamente autorizzato dai lord a farlo. Per qualche strano motivo, perfino l'aria 
+                                sembra più fresca. Tutti a Waterdeep
+                                hanno le loro idee riguardo a questo o a quel cittadino influente che potrebbe essere un lord della città
+                                e c'è anche chi non esita a dare voce alle sue convinzioni, ma quei pochi che sono stati affrontati su questo
+                                tema non hanno mai dichiarato di essere un lord e nessuno di coloro che li ha affrontati è mai riuscito a 
+                                fornire prove dei suoi sospetti. Gli altri lord cittadini, i nobili di Waterdeep, sono tutt'altro che nascosti.
+                                Si atteggiano a superiori, spendono denaro a piene mani e dettano legge sulle mode cittadine, che a loro volta finiscono per
+                                dettare la moda in tutto il Nord per quello che riguarda gli abiti, le armi, i gioielli, la musica e ogni altra
+                                preferenza che possa cambiare in un batter d'occhio a seguito di un capriccio e una spesa sufficientemente
+                                esorbitante. Oltre settantacinque famiglie nobili abitano a Waterdeep, coinvolte in questioni d'affari, rivalità e
+                                lotte interne di ogni genere. Un titolo nobiliare fornisce numerosi vantaggi. Agendo dalla sua dimora, un nobile
+                                può facilmente innalzare un mediocre artigiano dall'anonimato, sopprimere le speranze di un ricco mercante o fornire
+                                sostegno a un'ambiziosa banda di avventurieri intenzionata a guadagnare fama e ricchezza. L'unica vera forma
+                                di competizione a cui i nobili devono fare attenzione è quella degli altri nobili. Tali rivalità danno origine
+                                a una miriade di pettegolezzi e di intrighi di ogni genere, sebbene i nobili di Waterdeep tentino sempre di mantenere
+                                una facciata di civiltà nei loro bisticci. &Egrave; raro che tutti i nobili si trovino d'accordo su qualcosa, 
+                                ma almeno su una questione tutte le casate nobili la vedono allo stesso modo: il loro
+                                rango non dovrebbe mai essere compromesso dall'inclusione di nuovi arrivati e sicuramente da alcuno
+                                spendaccione intenzionato a comprarsi un titolo nobiliare con il denaro. Quando sotto il governo di Lord
+                                Neverember divenne legale la vendita di titoli nobiliari da parte delle casate più indigenti, consentendo quindi
+                                a chiunque di diventare un nobile, molti capi delle casate di sangue più antico furono oltraggiate dalla cosa, specialmente
+                                quando videro alcuni acquirentio perdere tutto il loro denaro e rivendere il loro titolo nel giro di una o due
+                                stagioni. Il Lord Svelato Laeral Silverhand, con grande sollievo di quelle casate, ha intuito che questa decisione
+                                era una follia e ha ottenuto dai Lord di Waterdeep non solo un sostegno sufficiente ad abrogare questa pratica,
+                                ma anchea ripristinare i titoli e le terre di quelle famiglie nobili che li avevano persi in un atto di follia. 
+                                Questo cambiamento le ha procurato il caloroso supporto di buona parte dei nobili. Ora i mercanti
+                                Zhent, Thayan e Balduriani hanno denaro a sufficienza da comprarsi una proprietà in città, se lo desiderano,
+                                ma quando lo fanno, la villa che acquistano non fornisce loro alcun titolo nobiliare o diritto legale.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item" data-item="6">
+                    <img src="../Immagini/Lord_Svelato.png" alt="Lord Svelato">
+                    <p>Lord Svelato - Lady Laeral Silverhand</p>
+                    <div class="scheda-menu">
+                        <img class="immagine-scheda" src="../Immagini/Lord_Svelato.png" alt="Lord Svelato Scheda">
+                        <div class="descrizione-scheda">
+                            <h2>Lord Svelato - Lady Laeral Silverhand</h2>
+                            <p>Il più sorprendente tra i nuovi sviluppi di Waterdeep è forse il ritorno di Laeral Silverhand. 
+                                Ritenuta morta da tempo, è tornata in scena solo nei tempi più recenti e si è rapidamente guadagnata il sostegno
+                                di tutti i lord mascherati, fino a soppiantare Dagult Neverember come Lord Svelato di Waterdeep. Sono rimasti
+                                in pochi a ricordare Lady Laeral come'era ai tempi del suo precedente soggiorno in città, ma gli elfi che
+                                vivono a Waterdeep da più di un secolo affermano che ora è molto più riservata di un tempo. Il nuovo Lord Svelato non parla mai della sua famiglia: se qualcuno nomina i suoi 
+                                figli, il suo defunto marito (il rinomato Bastone Nero, Khelben Arunsun) o una delle sue famose sorelle, 
+                                Laeral tronca bruscamente qualsiasi conversazione a cui stesse partecipando. I suoi rapporti con il Bastone 
+                                Nero attuale, Vajra Safahar, sono cordiali, ma è raro che le due conversino da sole e molti credono che Lady
+                                Laeral abbia ben poco da imparare da una maga che deve fare ancora molta strada prima di dirsi sua pari. Come
+                                sempre, il Lord Svelato viene scelto e sostenuto da vari lord mascherati che 
+                                portano maschere, tuniche e amuleti per camuffarsi quando partecipano pubblicamente
+                                a un processo o a un consiglio, e che determinano l'agenda politica di Waterdeep. </p>
                         </div>
                     </div>
                 </div>
